feat: added styles for smaller devices, updated card text

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html {
 
   & .mask {
     width: 100%;
-    background-color: #000000a2;
+    background-color: #000000b0;
   }
 
   & .title {
@@ -56,6 +56,7 @@ html {
     color: #f7f7f7;
 
     & a {
+      text-decoration: none;
       box-shadow: 0rem 0rem 0.2rem #f7f7f7f3;
       transition: 0.2s ease;
     }
@@ -78,6 +79,7 @@ html {
         flex-direction: column;
         justify-content: end;
         align-items: flex-start;
+        backdrop-filter: blur(5px);
 
         padding: 8rem 5rem;
       }
@@ -89,7 +91,8 @@ html {
       gap: 1.5rem;
       padding: 5rem;
       border-radius: 2rem;
-      background-color: #000000a2;
+      background-color: #000000b0;
+      backdrop-filter: blur(4px);
 
       & i {
         font-size: 4rem;
@@ -146,6 +149,84 @@ html {
 
       & .portfolio {
         background: url(./images/portfolio.jpg) center / cover no-repeat;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .main {
+    & .mask {
+      background-color: #000000c7;
+    }
+
+    & .title {
+      gap: 0.5rem;
+      padding: 2.5rem 0;
+
+      & span {
+        font-size: 1.3rem;
+      }
+
+      & h1 {
+        font-size: 2.8rem;
+        color: #f7f7f7;
+      }
+    }
+
+    & .cards {
+      flex-direction: column;
+      gap: 1.5rem;
+      padding: 0 0 2rem 0;
+
+      & .contact {
+        height: auto;
+        width: 90%;
+        border-radius: 1rem;
+
+        & .box {
+          justify-content: center;
+          padding: 2.5rem;
+        }
+      }
+
+      & .box {
+        gap: 1.5rem;
+        padding: 2.5rem;
+        border-radius: 1rem;
+        background-color: #000000c7;
+
+        & i {
+          font-size: 3.5rem;
+        }
+
+        & img {
+          height: 4rem;
+          width: 4rem;
+        }
+
+        & span {
+          font-size: 2.2rem;
+          color: #f7f7f7;
+        }
+
+        & p {
+          font-size: 1.4rem;
+          font-weight: 300;
+          line-height: 1.6;
+        }
+      }
+
+      & .group-cards {
+        width: 90%;
+        gap: 1.5rem;
+
+        & .cdt,
+        .portfolio {
+          height: auto;
+          width: 100%;
+          border-radius: 1rem;
+        }
       }
     }
   }
