--- a/style.css
+++ b/style.css
@@ -120,6 +120,10 @@ html {
         line-height: 1.4;
         color: #f7f7f7d0;
       }
+
+      & .btn {
+        display: none;
+      }
     }
 
     & .group-cards {
@@ -213,6 +217,21 @@ html {
           font-size: 1.4rem;
           font-weight: 300;
           line-height: 1.6;
+        }
+
+        & .btn {
+          display: block;
+          text-align: center;
+          font-size: 1.4rem;
+          font-weight: 400;
+          padding: 1.5rem 0;
+          width: 100%;
+
+          color: #f7f7f7;
+          background-color: #000000d3;
+
+          border: none;
+          border-radius: 0.5rem;
         }
       }
 
