--- a/style.css
+++ b/style.css
@@ -223,12 +223,12 @@ html {
           display: block;
           text-align: center;
           font-size: 1.6rem;
-          font-weight: 300;
+          font-weight: 400;
           padding: 1.8rem 0;
           width: 100%;
 
-          color: #f7f7f7;
-          background-color: #000;
+          color: #000;
+          background-color: #f7f7f7;
           opacity: 0.8;
 
           border: none;
