--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html {
   font-family: "Poppins", sans-serif;
   width: 100%;
 
-  background: url(./images/background.jpg) center / cover no-repeat;
+  background: url(../images/background.jpg) center / cover no-repeat;
 
   & .mask {
     width: 100%;
@@ -72,7 +72,7 @@ html {
       width: 50%;
       border-radius: 2rem;
 
-      background: url(./images/thiagosantos.jpeg) top center / cover no-repeat;
+      background: url(../images/thiagosantos.jpeg) top center / cover no-repeat;
 
       & .box {
         display: flex;
@@ -148,7 +148,7 @@ html {
       }
 
       & .cdt {
-        background: url(./images/foguete.jfif) center / cover no-repeat;
+        background: url(../images/foguete.jfif) center / cover no-repeat;
 
         & br {
           display: none;
@@ -156,7 +156,7 @@ html {
       }
 
       & .portfolio {
-        background: url(./images/portfolio.jpg) center / cover no-repeat;
+        background: url(../images/portfolio.jpg) center / cover no-repeat;
       }
     }
   }
